@@ -1,6 +1,5 @@
 package org.libpetri.smt.z3;
 
-import com.microsoft.z3.*;
 import org.libpetri.analysis.FragmentMode;
 import org.libpetri.analysis.MarkingState;
 import org.libpetri.core.PetriNet;
@@ -11,11 +10,13 @@ import org.libpetri.smt.encoding.FlatTransition;
 import org.libpetri.smt.invariant.PInvariant;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.TreeSet;
 
 /**
  * Bounded <b>name-coloured</b> CHC encoding for &nu;-net join correlation
@@ -68,9 +69,8 @@ import java.util.Set;
  * consumer no resident colour) and the marking is not a sink state — mirroring the flat
  * {@link SmtEncoder} deadlock with the same env-injection relaxation.
  *
- * <p>This mirrors the Rust reference {@code name_coloured_encoder.rs} exactly; the only
- * difference is that this encoder builds Z3 {@link BoolExpr} objects via the native Java
- * bindings rather than emitting SMT-LIB2 text.
+ * <p>This mirrors the Rust reference {@code name_coloured_encoder.rs} exactly and emits
+ * the same SMT-LIB2 text byte for byte (VER-013).
  */
 public final class NameColouredEncoder {
 
@@ -213,6 +213,15 @@ public final class NameColouredEncoder {
             return null;
         }
         int k = kBound;
+        // NU-053 AC6: k = 0 is an exact plan — no coloured token can ever exist, so every
+        // mint / join / consumer is dead and the zero-slot encoding emits no rule for them
+        // (Semiflow.lean, vacuous_colour_layer). The one shape it cannot encode is a net
+        // with no uncoloured place at all (Reachable would be nullary and every rule's
+        // quantifier empty); such a net holds no token at M0, so fall back to the flat
+        // encoding.
+        if (k == 0 && coloured.length == p) {
+            return null;
+        }
 
         // Budget places gate minting: a mint must consume ≥1 budget token — that is what
         // makes it a fresh-name fork rather than an arbitrary coloured producer.
@@ -307,12 +316,18 @@ public final class NameColouredEncoder {
      * {@link PInvariant#constant()} is {@code y·M0}), or {@code null} when no covering
      * non-negative semiflow exists — the coloured set is then not structurally
      * token-bounded (a genuine unbounded colour leak) and the caller must fall back.
+     *
+     * <p>{@code 0} is a bound like any other (NU-053 AC6): with the covering law's initial
+     * sum at zero no coloured token can ever exist, every mint / join / consumer is dead on
+     * the reachable set, and the zero-slot plan is exact ({@code Semiflow.lean},
+     * {@code vacuous_colour_layer}). A validated semi-positive law's {@code y·M0} is never
+     * negative.
      */
     private static Integer colourSlotBound(int[] coloured, List<PInvariant> invariants) {
         // Tightest bound: a single non-negative P-semiflow weighting every coloured place.
         Integer single = null;
         for (PInvariant inv : invariants) {
-            if (!isSemiflow(inv) || inv.constant() < 1) {
+            if (!isSemiflow(inv)) {
                 continue;
             }
             boolean coversAll = true;
@@ -330,27 +345,48 @@ public final class NameColouredEncoder {
             return single;
         }
 
-        // Otherwise sum the non-negative semiflows that touch a coloured place — the sum
-        // is itself a valid non-negative P-semiflow. If together they weight every coloured
-        // place, Σ y·M0 is a sound (looser) bound; if some coloured place stays at weight 0
-        // across all of them, no non-negative semiflow covers it, so the coloured set is
-        // not structurally token-bounded → null (sound over-approximation).
-        long sumConst = 0;
+        // Otherwise sum non-negative semiflows that touch a coloured place — the sum is
+        // itself a valid non-negative P-semiflow, so Σ y·M0 over any covering set is a
+        // sound (looser) bound. Zero-constant semiflows cover their places for free, so
+        // they go in first; a semiflow with a positive constant is added only if it
+        // touches a coloured place the free ones left uncovered (decided against that
+        // snapshot, so the result does not depend on enumeration order). If some
+        // coloured place stays at weight 0 across all of them, no non-negative semiflow
+        // covers it, so the coloured set is not structurally token-bounded → null
+        // (sound over-approximation).
         boolean[] covered = new boolean[coloured.length];
         for (PInvariant inv : invariants) {
-            if (!isSemiflow(inv)) {
+            if (!isSemiflow(inv) || inv.constant() != 0) {
                 continue;
             }
-            boolean touches = false;
             for (int i = 0; i < coloured.length; i++) {
                 if (weightAt(inv, coloured[i]) >= 1) {
                     covered[i] = true;
-                    touches = true;
                 }
             }
-            if (touches) {
-                sumConst += inv.constant();
+        }
+        boolean[] free = covered.clone();
+        long sumConst = 0;
+        for (PInvariant inv : invariants) {
+            if (!isSemiflow(inv) || inv.constant() == 0) {
+                continue;
             }
+            boolean touchesUncovered = false;
+            for (int i = 0; i < coloured.length; i++) {
+                if (!free[i] && weightAt(inv, coloured[i]) >= 1) {
+                    touchesUncovered = true;
+                    break;
+                }
+            }
+            if (!touchesUncovered) {
+                continue;
+            }
+            for (int i = 0; i < coloured.length; i++) {
+                if (weightAt(inv, coloured[i]) >= 1) {
+                    covered[i] = true;
+                }
+            }
+            sumConst += inv.constant();
         }
         boolean allCovered = true;
         for (boolean c : covered) {
@@ -359,7 +395,7 @@ public final class NameColouredEncoder {
                 break;
             }
         }
-        return (allCovered && sumConst >= 1) ? (int) sumConst : null;
+        return allCovered ? (int) sumConst : null;
     }
 
     /** Weight of place {@code pid} in {@code inv} (0 if out of range). */
@@ -379,145 +415,159 @@ public final class NameColouredEncoder {
     }
 
     /** Column layout: uncoloured place -> one var; coloured place -> k per-colour vars. */
-    @SuppressWarnings("unused")
     private static final class Layout {
         /** Column index of each uncoloured place ({@code -1} if coloured). */
         final int[] colUnc;
-        /** Per coloured place: its {@code k} column indices ({@code null} if uncoloured). */
+        /** Per coloured place: its {@code k} column indices (empty if uncoloured). */
         final int[][] colCol;
-        /** Total column count. */
-        final int nCols;
-        /** Current-marking bound vars, one per column (transition-rule scope: 2*nCols vars). */
-        final Expr<IntSort>[] cur;
-        /** Next-marking bound vars, one per column. */
-        final Expr<IntSort>[] nxt;
-        /** Quantified sorts for a transition rule (2*nCols Int). */
-        final Sort[] allSorts;
-        /** Quantified symbols for a transition rule. */
-        final Symbol[] allNames;
+        /** Current-marking variable names, one per column. */
+        final List<String> cur = new ArrayList<>();
+        /** Next-marking variable names, one per column. */
+        final List<String> nxt = new ArrayList<>();
 
-        @SuppressWarnings("unchecked")
-        private Layout(ColouredPlan plan, int p, Context ctx) {
+        Layout(ColouredPlan plan, int p) {
             this.colUnc = new int[p];
             this.colCol = new int[p][];
-            int cols = 0;
             for (int i = 0; i < p; i++) {
-                colUnc[i] = -1;
                 if (plan.isColoured[i]) {
                     int[] idxs = new int[plan.k];
                     for (int c = 0; c < plan.k; c++) {
-                        idxs[c] = cols++;
+                        idxs[c] = cur.size();
+                        cur.add("m" + i + "_" + c);
+                        nxt.add("m" + i + "_" + c + "p");
                     }
                     colCol[i] = idxs;
+                    colUnc[i] = -1;
                 } else {
-                    colUnc[i] = cols++;
+                    colUnc[i] = cur.size();
+                    colCol[i] = new int[0];
+                    cur.add("m" + i);
+                    nxt.add("m" + i + "p");
                 }
             }
-            this.nCols = cols;
+        }
 
-            IntSort intSort = ctx.getIntSort();
-            this.cur = new Expr[nCols];
-            this.nxt = new Expr[nCols];
-            this.allSorts = new Sort[2 * nCols];
-            this.allNames = new Symbol[2 * nCols];
-            // forall(c0..c_{nCols-1}, cp0..cp_{nCols-1}): de Bruijn — cp_{nCols-1} is
-            // innermost (index 0). cur[col] = mkBound(2*nCols-1-col), nxt[col] =
-            // mkBound(nCols-1-col). Mirrors SmtEncoder's transition-rule indexing.
-            for (int col = 0; col < nCols; col++) {
-                allNames[col] = ctx.mkSymbol("c" + col);
-                allSorts[col] = intSort;
-                allNames[nCols + col] = ctx.mkSymbol("cp" + col);
-                allSorts[nCols + col] = intSort;
-                cur[col] = (Expr<IntSort>) ctx.mkBound(2 * nCols - 1 - col, intSort);
-                nxt[col] = (Expr<IntSort>) ctx.mkBound(nCols - 1 - col, intSort);
+        /**
+         * Aggregate token-count expression for a place over the given var-set ({@code cur}
+         * or {@code nxt}): the single uncoloured var, or the sum of its colours.
+         */
+        String aggregate(int place, ColouredPlan plan, List<String> vars) {
+            if (plan.isColoured[place]) {
+                int[] cols = colCol[place];
+                return switch (cols.length) {
+                    // k = 0: a coloured place has no slot and never holds a token.
+                    case 0 -> "0";
+                    case 1 -> vars.get(cols[0]);
+                    default -> {
+                        var parts = new ArrayList<String>(cols.length);
+                        for (int c : cols) {
+                            parts.add(vars.get(c));
+                        }
+                        yield "(+ " + String.join(" ", parts) + ")";
+                    }
+                };
             }
+            return vars.get(colUnc[place]);
+        }
+
+        String quantified(List<String> vars) {
+            var parts = new ArrayList<String>(vars.size());
+            for (var v : vars) {
+                parts.add("(" + v + " Int)");
+            }
+            return String.join(" ", parts);
         }
     }
+
+    /** A changed column and its update expression. */
+    private record Update(int col, String expr) {}
 
     /** Contributes a rule's enablement guards and changed-column updates. */
     @FunctionalInterface
     private interface Fill {
-        void apply(List<BoolExpr> enab, Map<Integer, Expr<IntSort>> upd);
+        void apply(List<String> enab, List<Update> upd);
     }
 
     /**
-     * Encodes the supported &nu;-net as bounded name-coloured CHC for Z3 Spacer. Reuses
-     * {@link SmtEncoder.EncodingResult}; with the query {@code (not Error)}, {@code sat}
-     * &rArr; PROVEN, {@code unsat} &rArr; VIOLATED (the Spacer convention shared with
-     * {@link SmtEncoder}).
+     * Encodes the supported &nu;-net as bounded name-coloured CHC for Z3 Spacer, as
+     * SMT-LIB2 text byte-identical to the Rust reference ({@code encode_coloured}).
+     * With the query {@code (not Error)}, {@code sat} &rArr; PROVEN, {@code unsat}
+     * &rArr; VIOLATED (the Spacer convention shared with {@link SmtEncoder}).
      *
-     * @param sinkPlaces terminal places (a quiescent marking holding only sinks is not a
-     *                   deadlock) — used by the colour-aware deadlock predicate
+     * @param sinkPlaces terminal places (a quiescent marking holding a sink token is not a
+     *                   deadlock, VER-002) — used by the colour-aware deadlock predicate
+     * @return the encoding, or {@code null} when the property names a place that does not
+     *         resolve in the net (the verifier reports Unknown rather than certify a
+     *         vacuous PROVEN)
      */
-    public static SmtEncoder.EncodingResult encode(
-            Context ctx, Fixedpoint fp, ColouredPlan plan, FlatNet flat,
-            MarkingState initial, SmtProperty property, List<PInvariant> invariants,
-            Set<Place<?>> sinkPlaces) {
+    public static SmtEncoder.SmtEncoding encode(
+            ColouredPlan plan, FlatNet flat, MarkingState initial, SmtProperty property,
+            List<PInvariant> invariants, Collection<Place<?>> sinkPlaces) {
         int p = flat.placeCount();
         int k = plan.k;
-        Layout lay = new Layout(plan, p, ctx);
+        Layout lay = new Layout(plan, p);
+        int nCols = lay.cur.size();
 
-        Sort[] markingSorts = new Sort[lay.nCols];
-        for (int i = 0; i < lay.nCols; i++) {
-            markingSorts[i] = ctx.getIntSort();
+        var lines = new ArrayList<String>();
+        lines.add("(set-logic HORN)");
+        lines.add("");
+        var ints = new ArrayList<String>(nCols);
+        for (int i = 0; i < nCols; i++) {
+            ints.add("Int");
         }
-        FuncDecl<BoolSort> reachable = ctx.mkFuncDecl(
-            ctx.mkSymbol("Reachable"), markingSorts, ctx.getBoolSort());
-        fp.registerRelation(reachable);
-        FuncDecl<BoolSort> error = ctx.mkFuncDecl(
-            ctx.mkSymbol("Error"), new Sort[0], ctx.getBoolSort());
-        fp.registerRelation(error);
+        lines.add("(declare-fun Reachable (" + String.join(" ", ints) + ") Bool)");
+        lines.add("(declare-fun Error () Bool)");
+        lines.add("");
 
         // Init: uncoloured places carry their initial count; coloured start empty.
-        IntExpr[] init = new IntExpr[lay.nCols];
+        var init = new ArrayList<String>(nCols);
         for (int i = 0; i < p; i++) {
             if (plan.isColoured[i]) {
                 for (int c = 0; c < k; c++) {
-                    init[lay.colCol[i][c]] = ctx.mkInt(0);
+                    init.add("0");
                 }
             } else {
-                init[lay.colUnc[i]] = ctx.mkInt(initial.tokens(flat.places().get(i)));
+                init.add(Integer.toString(initial.tokens(flat.places().get(i))));
             }
         }
-        fp.addRule((BoolExpr) reachable.apply((Expr[]) init), ctx.mkSymbol("init"));
+        lines.add("(assert (Reachable " + String.join(" ", init) + "))");
+        lines.add("");
 
         // Transition rules.
         for (int ti = 0; ti < plan.classes.size(); ti++) {
             Klass cls = plan.classes.get(ti);
             FlatTransition ft = flat.transitions().get(ti);
             switch (cls) {
-                case Untouched _ -> addRule(ctx, fp, reachable, lay, plan, invariants,
-                        ft.name(), (enab, upd) -> uncolouredIncidence(ctx, lay, plan, ft, enab, upd));
+                case Untouched _ -> lines.add(encodeRule(plan, lay, invariants,
+                    (enab, upd) -> uncolouredIncidence(lay, plan, ft, enab, upd)));
                 case Mint m -> {
                     for (int c = 0; c < k; c++) {
                         final int cc = c;
-                        addRule(ctx, fp, reachable, lay, plan, invariants,
-                            ft.name() + "_mint_" + cc, (enab, upd) -> {
-                                uncolouredIncidence(ctx, lay, plan, ft, enab, upd);
-                                // Globally fresh colour: cc must be empty in every coloured place.
-                                for (int q : plan.coloured) {
-                                    enab.add(ctx.mkEq(lay.cur[lay.colCol[q][cc]], ctx.mkInt(0)));
-                                }
-                                for (int o : m.colouredOut()) {
-                                    int col = lay.colCol[o][cc];
-                                    upd.put(col, ctx.mkAdd(lay.cur[col], ctx.mkInt(1)));
-                                }
-                            });
+                        lines.add(encodeRule(plan, lay, invariants, (enab, upd) -> {
+                            uncolouredIncidence(lay, plan, ft, enab, upd);
+                            // Globally fresh colour: cc must be empty in every coloured place.
+                            for (int q : plan.coloured) {
+                                enab.add("(= " + lay.cur.get(lay.colCol[q][cc]) + " 0)");
+                            }
+                            for (int o : m.colouredOut()) {
+                                int col = lay.colCol[o][cc];
+                                upd.add(new Update(col, "(+ " + lay.cur.get(col) + " 1)"));
+                            }
+                        }));
                     }
                 }
                 case Join j -> {
                     for (int c = 0; c < k; c++) {
                         final int cc = c;
-                        addRule(ctx, fp, reachable, lay, plan, invariants,
-                            ft.name() + "_join_" + cc, (enab, upd) -> {
-                                uncolouredIncidence(ctx, lay, plan, ft, enab, upd);
-                                // Same colour cc present in every correlated input.
-                                for (int ip : j.colouredIn()) {
-                                    int col = lay.colCol[ip][cc];
-                                    enab.add(ctx.mkGe(lay.cur[col], ctx.mkInt(1)));
-                                    upd.put(col, ctx.mkSub(lay.cur[col], ctx.mkInt(1)));
-                                }
-                            });
+                        lines.add(encodeRule(plan, lay, invariants, (enab, upd) -> {
+                            uncolouredIncidence(lay, plan, ft, enab, upd);
+                            // Same colour cc present in every correlated input.
+                            for (int ip : j.colouredIn()) {
+                                int col = lay.colCol[ip][cc];
+                                enab.add("(>= " + lay.cur.get(col) + " 1)");
+                                upd.add(new Update(col, "(- " + lay.cur.get(col) + " 1)"));
+                            }
+                        }));
                     }
                 }
                 case Consume co -> {
@@ -525,83 +575,43 @@ public final class NameColouredEncoder {
                     // and thread it into each coloured output (relay), or into none (drain).
                     for (int c = 0; c < k; c++) {
                         final int cc = c;
-                        addRule(ctx, fp, reachable, lay, plan, invariants,
-                            ft.name() + "_consume_" + cc, (enab, upd) -> {
-                                uncolouredIncidence(ctx, lay, plan, ft, enab, upd);
-                                int icol = lay.colCol[co.inputCol()][cc];
-                                enab.add(ctx.mkGe(lay.cur[icol], ctx.mkInt(1)));
-                                upd.put(icol, ctx.mkSub(lay.cur[icol], ctx.mkInt(1)));
-                                for (int o : co.colouredOut()) {
-                                    int ocol = lay.colCol[o][cc];
-                                    upd.put(ocol, ctx.mkAdd(lay.cur[ocol], ctx.mkInt(1)));
-                                }
-                            });
+                        lines.add(encodeRule(plan, lay, invariants, (enab, upd) -> {
+                            uncolouredIncidence(lay, plan, ft, enab, upd);
+                            int icol = lay.colCol[co.inputCol()][cc];
+                            enab.add("(>= " + lay.cur.get(icol) + " 1)");
+                            upd.add(new Update(icol, "(- " + lay.cur.get(icol) + " 1)"));
+                            for (int o : co.colouredOut()) {
+                                int ocol = lay.colCol[o][cc];
+                                upd.add(new Update(ocol, "(+ " + lay.cur.get(ocol) + " 1)"));
+                            }
+                        }));
                     }
                 }
             }
         }
+        lines.add("");
 
-        // Error rule. `false` ⇒ the property names an unresolved place; refuse to
-        // build a vacuously-provable encoding and let the verifier report Unknown.
-        if (!addErrorRule(ctx, fp, reachable, error, lay, plan, flat, property, sinkPlaces)) {
+        // Error rule. `null` ⇒ the property names an unresolved place; refuse to build a
+        // vacuously-provable encoding and let the verifier report Unknown.
+        String error = encodeError(plan, lay, flat, property, sinkPlaces, injectedEnvIndices(flat));
+        if (error == null) {
             return null;
         }
+        lines.add(error);
+        lines.add("");
+        lines.add("(assert (not Error))");
+        lines.add("(check-sat)");
 
-        return new SmtEncoder.EncodingResult((BoolExpr) error.apply(), reachable);
-    }
-
-    /**
-     * Builds one transition CHC rule. {@code fill} contributes the enablement guards and
-     * the changed-column updates; every other column is copied unchanged, changed columns
-     * get a non-negativity guard, and the (lifted) P-invariants constrain the successor.
-     */
-    private static void addRule(
-            Context ctx, Fixedpoint fp, FuncDecl<BoolSort> reachable, Layout lay,
-            ColouredPlan plan, List<PInvariant> invariants, String ruleName, Fill fill) {
-        List<BoolExpr> enab = new ArrayList<>();
-        Map<Integer, Expr<IntSort>> upd = new HashMap<>();
-        fill.apply(enab, upd);
-
-        List<BoolExpr> conditions = new ArrayList<>();
-        conditions.add((BoolExpr) reachable.apply(lay.cur));
-        conditions.addAll(enab);
-
-        // A changed column gets its update + non-negativity guard; every other column is
-        // copied unchanged.
-        for (int col = 0; col < lay.nCols; col++) {
-            Expr<IntSort> expr = upd.get(col);
-            if (expr != null) {
-                conditions.add(ctx.mkEq(lay.nxt[col], expr));
-                conditions.add(ctx.mkGe(lay.nxt[col], ctx.mkInt(0)));
-            } else {
-                conditions.add(ctx.mkEq(lay.nxt[col], lay.cur[col]));
-            }
-        }
-
-        for (PInvariant inv : invariants) {
-            BoolExpr eq = liftedInvariant(ctx, inv, plan, lay, lay.nxt);
-            if (eq != null) {
-                conditions.add(eq);
-            }
-        }
-
-        BoolExpr body = ctx.mkAnd(conditions.toArray(new BoolExpr[0]));
-        BoolExpr head = (BoolExpr) reachable.apply(lay.nxt);
-        BoolExpr rule = ctx.mkImplies(body, head);
-        Quantifier qRule = ctx.mkForall(lay.allSorts, lay.allNames, rule, 1, null, null, null, null);
-        fp.addRule(qRule, ctx.mkSymbol(ruleName));
+        return new SmtEncoder.SmtEncoding(String.join("\n", lines), p);
     }
 
     /**
      * Pushes the enablement guards and column updates contributed by a transition's
      * <b>uncoloured</b> incidence (consume/produce on non-coloured places). Coloured
-     * columns are handled by the caller (mint produces, join/consumer consume). Mirrors
-     * the Rust reference — no blanket current-marking non-negativity guard (the Reachable
-     * invariant carries that).
+     * columns are handled by the caller (mint produces, join/consumer consume).
      */
     private static void uncolouredIncidence(
-            Context ctx, Layout lay, ColouredPlan plan, FlatTransition ft,
-            List<BoolExpr> enab, Map<Integer, Expr<IntSort>> upd) {
+            Layout lay, ColouredPlan plan, FlatTransition ft, List<String> enab, List<Update> upd) {
         int p = ft.preVector().length;
         for (int i = 0; i < p; i++) {
             if (plan.isColoured[i]) {
@@ -610,26 +620,71 @@ public final class NameColouredEncoder {
             int col = lay.colUnc[i];
             int pre = ft.preVector()[i];
             if (pre > 0) {
-                enab.add(ctx.mkGe(lay.cur[col], ctx.mkInt(pre)));
+                enab.add("(>= " + lay.cur.get(col) + " " + pre + ")");
             }
             if (contains(ft.resetPlaces(), i) || ft.consumeAll()[i]) {
-                upd.put(col, ctx.mkInt(ft.postVector()[i]));
+                upd.add(new Update(col, Integer.toString(ft.postVector()[i])));
             } else {
                 int delta = ft.postVector()[i] - ft.preVector()[i];
                 if (delta > 0) {
-                    upd.put(col, ctx.mkAdd(lay.cur[col], ctx.mkInt(delta)));
+                    upd.add(new Update(col, "(+ " + lay.cur.get(col) + " " + delta + ")"));
                 } else if (delta < 0) {
-                    upd.put(col, ctx.mkSub(lay.cur[col], ctx.mkInt(-delta)));
+                    upd.add(new Update(col, "(- " + lay.cur.get(col) + " " + (-delta) + ")"));
                 }
             }
         }
         // Inhibitor / read arcs (all on uncoloured places — checked in buildPlan).
         for (int pid : ft.inhibitorPlaces()) {
-            enab.add(ctx.mkEq(lay.cur[lay.colUnc[pid]], ctx.mkInt(0)));
+            enab.add("(= " + lay.cur.get(lay.colUnc[pid]) + " 0)");
         }
         for (int pid : ft.readPlaces()) {
-            enab.add(ctx.mkGe(lay.cur[lay.colUnc[pid]], ctx.mkInt(1)));
+            enab.add("(>= " + lay.cur.get(lay.colUnc[pid]) + " 1)");
         }
+    }
+
+    /**
+     * Builds one transition CHC rule. {@code fill} contributes the enablement guards and
+     * the changed-column updates; every other column is copied unchanged, changed columns
+     * get a non-negativity guard, and the (lifted) P-invariants constrain the successor.
+     */
+    private static String encodeRule(
+            ColouredPlan plan, Layout lay, List<PInvariant> invariants, Fill fill) {
+        List<String> enab = new ArrayList<>();
+        List<Update> upd = new ArrayList<>();
+        fill.apply(enab, upd);
+
+        var all = new ArrayList<>(lay.cur);
+        all.addAll(lay.nxt);
+
+        List<String> conditions = new ArrayList<>();
+        conditions.add("(Reachable " + String.join(" ", lay.cur) + ")");
+        conditions.addAll(enab);
+
+        // A changed column gets its update + non-negativity guard; every other column is
+        // copied unchanged. A later update of the same column wins.
+        String[] changed = new String[lay.cur.size()];
+        for (var u : upd) {
+            changed[u.col()] = u.expr();
+        }
+        for (int col = 0; col < lay.cur.size(); col++) {
+            if (changed[col] != null) {
+                conditions.add("(= " + lay.nxt.get(col) + " " + changed[col] + ")");
+                conditions.add("(>= " + lay.nxt.get(col) + " 0)");
+            } else {
+                conditions.add("(= " + lay.nxt.get(col) + " " + lay.cur.get(col) + ")");
+            }
+        }
+
+        for (PInvariant inv : invariants) {
+            String eq = liftedInvariant(inv, plan, lay, lay.nxt);
+            if (eq != null) {
+                conditions.add(eq);
+            }
+        }
+
+        String body = "(and " + String.join("\n            ", conditions) + ")";
+        return "(assert (forall (" + lay.quantified(all) + ")\n  (=> " + body
+            + "\n      (Reachable " + String.join(" ", lay.nxt) + "))))";
     }
 
     /**
@@ -637,78 +692,34 @@ public final class NameColouredEncoder {
      * becomes the sum of its colours (= its aggregate count). Returns {@code null} when
      * the invariant support is empty.
      */
-    @SuppressWarnings("unchecked")
-    private static BoolExpr liftedInvariant(
-            Context ctx, PInvariant inv, ColouredPlan plan, Layout lay, Expr<IntSort>[] vars) {
-        if (inv.support().isEmpty()) {
-            return null;
-        }
-        ArithExpr<IntSort> sum = ctx.mkInt(0);
-        boolean any = false;
-        for (int i : inv.support()) {
-            ArithExpr<IntSort> agg = aggregate(ctx, i, plan, lay, vars);
+    private static String liftedInvariant(
+            PInvariant inv, ColouredPlan plan, Layout lay, List<String> vars) {
+        var terms = new ArrayList<String>();
+        for (int i : new TreeSet<>(inv.support())) {
+            String agg = lay.aggregate(i, plan, vars);
             int w = inv.weights()[i];
-            ArithExpr<IntSort> term = (w == 1) ? agg : ctx.mkMul(ctx.mkInt(w), agg);
-            sum = ctx.mkAdd(sum, term);
-            any = true;
+            terms.add(w == 1 ? agg : "(* " + w + " " + agg + ")");
         }
-        if (!any) {
+        if (terms.isEmpty()) {
             return null;
         }
-        return ctx.mkEq(sum, ctx.mkInt(inv.constant()));
+        String sum = terms.size() == 1 ? terms.getFirst() : "(+ " + String.join(" ", terms) + ")";
+        return "(= " + sum + " " + inv.constant() + ")";
     }
 
     /**
-     * Aggregate token-count expression for a place over the given var-set: the single
-     * uncoloured var, or the sum of its colours.
+     * Encodes the error rule: a reachable marking that violates the property, or
+     * {@code null} when the property names an unresolved place ({@link #encodeViolation}).
      */
-    @SuppressWarnings("unchecked")
-    private static ArithExpr<IntSort> aggregate(
-            Context ctx, int place, ColouredPlan plan, Layout lay, Expr<IntSort>[] vars) {
-        if (plan.isColoured[place]) {
-            int[] cols = lay.colCol[place];
-            ArithExpr<IntSort> sum = (ArithExpr<IntSort>) vars[cols[0]];
-            for (int c = 1; c < cols.length; c++) {
-                sum = ctx.mkAdd(sum, vars[cols[c]]);
-            }
-            return sum;
-        }
-        return (ArithExpr<IntSort>) vars[lay.colUnc[place]];
-    }
-
-    /** Encodes the error rule: a reachable marking that violates the property. */
-    /**
-     * Adds the error CHC rule, or returns {@code false} when the property names a
-     * place that does not resolve in the net ({@link #encodeViolation} returned
-     * {@code null}). In that case no rule is added and the caller reports Unknown
-     * rather than certify a vacuous PROVEN.
-     */
-    @SuppressWarnings("unchecked")
-    private static boolean addErrorRule(
-            Context ctx, Fixedpoint fp, FuncDecl<BoolSort> reachable, FuncDecl<BoolSort> error,
-            Layout lay, ColouredPlan plan, FlatNet flat, SmtProperty property, Set<Place<?>> sinkPlaces) {
-        int nCols = lay.nCols;
-        IntSort intSort = ctx.getIntSort();
-        Symbol[] names = new Symbol[nCols];
-        Sort[] sorts = new Sort[nCols];
-        Expr<IntSort>[] cur = new Expr[nCols];
-        for (int col = 0; col < nCols; col++) {
-            names[col] = ctx.mkSymbol("c" + col);
-            sorts[col] = intSort;
-            cur[col] = (Expr<IntSort>) ctx.mkBound(nCols - 1 - col, intSort);
-        }
-
-        Map<Integer, Integer> envInj = injectedEnvIndices(flat);
-        BoolExpr reachBody = (BoolExpr) reachable.apply(cur);
-        BoolExpr violation = encodeViolation(ctx, plan, lay, flat, property, sinkPlaces, envInj, cur);
+    private static String encodeError(
+            ColouredPlan plan, Layout lay, FlatNet flat, SmtProperty property,
+            Collection<Place<?>> sinkPlaces, Map<Integer, Integer> envInj) {
+        String violation = encodeViolation(plan, lay, flat, property, sinkPlaces, envInj);
         if (violation == null) {
-            return false; // unresolved property place → signal Unknown
+            return null;
         }
-        BoolExpr body = ctx.mkAnd(reachBody, violation);
-        BoolExpr rule = ctx.mkImplies(body, (BoolExpr) error.apply());
-        Quantifier qRule = ctx.mkForall(sorts, names, rule, 1, null, null, null, null);
-        fp.addRule(qRule, ctx.mkSymbol("error"));
-        return true;
+        return "(assert (forall (" + lay.quantified(lay.cur) + ")\n  (=> (and (Reachable "
+            + String.join(" ", lay.cur) + ") " + violation + ")\n      Error)))";
     }
 
     /**
@@ -722,117 +733,92 @@ public final class NameColouredEncoder {
      * PROVEN, silently certifying a mis-named place; {@code null} propagates up so
      * the verifier reports Unknown instead.
      */
-    private static BoolExpr encodeViolation(
-            Context ctx, ColouredPlan plan, Layout lay, FlatNet flat,
-            SmtProperty property, Set<Place<?>> sinkPlaces, Map<Integer, Integer> envInj,
-            Expr<IntSort>[] cur) {
+    private static String encodeViolation(
+            ColouredPlan plan, Layout lay, FlatNet flat, SmtProperty property,
+            Collection<Place<?>> sinkPlaces, Map<Integer, Integer> envInj) {
         return switch (property) {
-            case SmtProperty.PlaceBound pb -> boundViolation(ctx, plan, lay, flat, pb.place().name(), pb.bound(), cur);
-            case SmtProperty.BranchPlaceBound bpb -> boundViolation(ctx, plan, lay, flat, bpb.place().name(), bpb.bound(), cur);
-            case SmtProperty.MutualExclusion me -> {
-                Integer i1 = flatIndex(flat, me.p1().name());
-                Integer i2 = flatIndex(flat, me.p2().name());
-                if (i1 == null || i2 == null) {
-                    yield ctx.mkFalse();
-                }
-                yield ctx.mkAnd(
-                    ctx.mkGe(aggregate(ctx, i1, plan, lay, cur), ctx.mkInt(1)),
-                    ctx.mkGe(aggregate(ctx, i2, plan, lay, cur), ctx.mkInt(1)));
-            }
-            case SmtProperty.Unreachable ur -> {
-                List<BoolExpr> conds = new ArrayList<>();
-                for (var place : ur.places()) {
-                    Integer pid = flatIndex(flat, place.name());
-                    if (pid != null) {
-                        conds.add(ctx.mkGe(aggregate(ctx, pid, plan, lay, cur), ctx.mkInt(1)));
-                    }
-                }
-                yield conds.isEmpty() ? ctx.mkFalse() : ctx.mkAnd(conds.toArray(new BoolExpr[0]));
-            }
+            case SmtProperty.PlaceBound pb -> boundViolation(plan, lay, flat, pb.place(), pb.bound());
+            case SmtProperty.BranchPlaceBound bpb -> boundViolation(plan, lay, flat, bpb.place(), bpb.bound());
+            case SmtProperty.MutualExclusion me ->
+                anyPlacePresent(plan, lay, flat, List.of(me.p1(), me.p2()));
+            case SmtProperty.Unreachable ur -> anyPlacePresent(plan, lay, flat, ur.places());
             case SmtProperty.DeadlockFree _ ->
-                encodeColouredDeadlock(ctx, plan, lay, flat, sinkPlaces, envInj, cur);
+                encodeColouredDeadlock(plan, lay, flat, sinkPlaces, envInj);
             case SmtProperty.JoinedOrDeadLettered jdl -> {
-                Integer pid = flatIndex(flat, jdl.pending().name());
-                if (pid == null) {
-                    // Unresolved pending place: a false violation term would make the
-                    // Error rule unsatisfiable → a vacuous PROVEN. Signal Unknown instead.
+                int pid = flat.indexOf(jdl.pending());
+                if (pid < 0) {
                     yield null;
                 }
-                BoolExpr deadlock = encodeColouredDeadlock(ctx, plan, lay, flat, sinkPlaces, envInj, cur);
-                yield ctx.mkAnd(deadlock, ctx.mkGe(aggregate(ctx, pid, plan, lay, cur), ctx.mkInt(1)));
+                String deadlock = encodeColouredDeadlock(plan, lay, flat, sinkPlaces, envInj);
+                yield "(and " + deadlock + " (>= " + lay.aggregate(pid, plan, lay.cur) + " 1))";
             }
         };
     }
 
-    private static BoolExpr boundViolation(
-            Context ctx, ColouredPlan plan, Layout lay, FlatNet flat,
-            String placeName, int bound, Expr<IntSort>[] cur) {
-        Integer pid = flatIndex(flat, placeName);
-        if (pid == null) {
+    /** All the given places (that resolve) hold a token; {@code false} when none resolves. */
+    private static String anyPlacePresent(
+            ColouredPlan plan, Layout lay, FlatNet flat, Collection<Place<?>> places) {
+        var conds = new ArrayList<String>();
+        for (int pid : SmtEncoder.indexOrdered(flat, places)) {
+            conds.add("(>= " + lay.aggregate(pid, plan, lay.cur) + " 1)");
+        }
+        return conds.isEmpty() ? "false" : "(and " + String.join(" ", conds) + ")";
+    }
+
+    private static String boundViolation(
+            ColouredPlan plan, Layout lay, FlatNet flat, Place<?> place, int bound) {
+        int pid = flat.indexOf(place);
+        if (pid < 0) {
             // Unresolved bound place: a false violation term would vacuously PROVE the
             // bound. Return null so the verifier reports Unknown instead of certifying.
             return null;
         }
-        return ctx.mkGt(aggregate(ctx, pid, plan, lay, cur), ctx.mkInt(bound));
+        return "(> " + lay.aggregate(pid, plan, lay.cur) + " " + bound + ")";
     }
 
     /**
      * Colour-aware deadlock predicate (NU-053): every transition is disabled (no colour
-     * enables it) and the marking is not a sink state. Mirrors {@link SmtEncoder}'s flat
-     * {@code encodeDeadlock} with the same env-injection relaxation (VER-006), lifted to
-     * the coloured layout.
+     * enables it) and no declared sink place holds a token (VER-002). Mirrors
+     * {@link SmtEncoder}'s flat deadlock with the same env-injection relaxation
+     * (VER-006), lifted to the coloured layout.
      */
-    private static BoolExpr encodeColouredDeadlock(
-            Context ctx, ColouredPlan plan, Layout lay, FlatNet flat,
-            Set<Place<?>> sinkPlaces, Map<Integer, Integer> envInj, Expr<IntSort>[] cur) {
-        List<BoolExpr> disabledConditions = new ArrayList<>();
+    private static String encodeColouredDeadlock(
+            ColouredPlan plan, Layout lay, FlatNet flat, Collection<Place<?>> sinkPlaces,
+            Map<Integer, Integer> envInj) {
+        var disabledConditions = new ArrayList<String>();
         for (int ti = 0; ti < plan.classes.size(); ti++) {
             Klass cls = plan.classes.get(ti);
             FlatTransition ft = flat.transitions().get(ti);
-            List<BoolExpr> reasons = new ArrayList<>();
-            boolean permanentlyDisabled = uncolouredDisable(ctx, ft, lay, plan, envInj, cur, reasons);
+            List<String> reasons = new ArrayList<>();
+            boolean permanentlyDisabled = uncolouredDisable(ft, lay, plan, envInj, reasons);
             if (permanentlyDisabled) {
                 // The transition can never fire — it is always "disabled".
-                disabledConditions.add(ctx.mkTrue());
+                disabledConditions.add("true");
                 continue;
             }
-            BoolExpr term = colouredDisabledTerm(ctx, cls, plan, lay, cur);
+            String term = colouredDisabledTerm(cls, plan, lay);
             if (term != null) {
                 reasons.add(term);
             }
             if (reasons.isEmpty()) {
                 // Always enabled (possibly via injection) — no marking is a deadlock.
-                return ctx.mkFalse();
+                return "false";
             }
             disabledConditions.add(reasons.size() == 1
-                ? reasons.get(0)
-                : ctx.mkOr(reasons.toArray(new BoolExpr[0])));
+                ? reasons.getFirst()
+                : "(or " + String.join(" ", reasons) + ")");
         }
 
-        // Not a sink state: some non-sink place still holds a token (aggregate count).
-        Set<Integer> sinkIndices = new HashSet<>();
-        for (var sink : sinkPlaces) {
-            int idx = flat.indexOf(sink);
-            if (idx >= 0) {
-                sinkIndices.add(idx);
-            }
-        }
-        if (!sinkIndices.isEmpty()) {
-            List<BoolExpr> nonSink = new ArrayList<>();
-            for (int pid = 0; pid < flat.placeCount(); pid++) {
-                if (!sinkIndices.contains(pid)) {
-                    nonSink.add(ctx.mkGe(aggregate(ctx, pid, plan, lay, cur), ctx.mkInt(1)));
-                }
-            }
-            if (!nonSink.isEmpty()) {
-                disabledConditions.add(ctx.mkOr(nonSink.toArray(new BoolExpr[0])));
-            }
+        // Declared sinks (VER-002): quiescence is a violation only when NO declared sink
+        // holds a token, so each declared sink contributes `aggregate(sink) = 0` over its
+        // colour slots. Same predicate as the flat deadlock.
+        for (int pid : SmtEncoder.indexOrdered(flat, sinkPlaces)) {
+            disabledConditions.add("(= " + lay.aggregate(pid, plan, lay.cur) + " 0)");
         }
 
-        if (disabledConditions.isEmpty()) {
-            return ctx.mkTrue();
-        }
-        return ctx.mkAnd(disabledConditions.toArray(new BoolExpr[0]));
+        return disabledConditions.isEmpty()
+            ? "true"
+            : "(and " + String.join(" ", disabledConditions) + ")";
     }
 
     /**
@@ -840,12 +826,11 @@ public final class NameColouredEncoder {
      * true ⇒ the transition's uncoloured part is unmet), collected into {@code reasons};
      * returns {@code true} when the transition is permanently disabled (an env cap below
      * the demand means it can never fire). Coloured places are excluded — their
-     * enablement is the per-class colour term. Mirrors {@link SmtEncoder}'s flat deadlock
-     * with the same env relaxation.
+     * enablement is the per-class colour term.
      */
     private static boolean uncolouredDisable(
-            Context ctx, FlatTransition ft, Layout lay, ColouredPlan plan,
-            Map<Integer, Integer> envInj, Expr<IntSort>[] cur, List<BoolExpr> reasons) {
+            FlatTransition ft, Layout lay, ColouredPlan plan, Map<Integer, Integer> envInj,
+            List<String> reasons) {
         boolean permanentlyDisabled = false;
         int p = ft.preVector().length;
         for (int i = 0; i < p; i++) {
@@ -859,10 +844,10 @@ public final class NameColouredEncoder {
                 }
                 continue;
             }
-            reasons.add(ctx.mkLt(cur[lay.colUnc[i]], ctx.mkInt(ft.preVector()[i])));
+            reasons.add("(< " + lay.cur.get(lay.colUnc[i]) + " " + ft.preVector()[i] + ")");
         }
         for (int inh : ft.inhibitorPlaces()) {
-            reasons.add(ctx.mkGt(cur[lay.colUnc[inh]], ctx.mkInt(0)));
+            reasons.add("(> " + lay.cur.get(lay.colUnc[inh]) + " 0)");
         }
         for (int rd : ft.readPlaces()) {
             if (envInj.containsKey(rd)) {
@@ -872,7 +857,7 @@ public final class NameColouredEncoder {
                 }
                 continue;
             }
-            reasons.add(ctx.mkLt(cur[lay.colUnc[rd]], ctx.mkInt(1)));
+            reasons.add("(< " + lay.cur.get(lay.colUnc[rd]) + " 1)");
         }
         return permanentlyDisabled;
     }
@@ -882,45 +867,47 @@ public final class NameColouredEncoder {
      * the class imposes no coloured enablement constraint). Combined by the caller with
      * the uncoloured disable reasons: the transition is disabled if EITHER holds.
      */
-    private static BoolExpr colouredDisabledTerm(
-            Context ctx, Klass cls, ColouredPlan plan, Layout lay, Expr<IntSort>[] cur) {
+    private static String colouredDisabledTerm(Klass cls, ColouredPlan plan, Layout lay) {
         int k = plan.k;
+        if (k == 0) {
+            // k = 0 (NU-053 AC6): no colour can ever be present, so every coloured class is
+            // disabled outright; the empty conjunctions below would render as `(and )`.
+            return cls instanceof Untouched ? null : "true";
+        }
         return switch (cls) {
             case Untouched _ -> null;
             case Mint _ -> {
                 // No globally-fresh colour: for every colour c, some coloured place holds c.
-                BoolExpr[] perColour = new BoolExpr[k];
+                var perColour = new ArrayList<String>(k);
                 for (int c = 0; c < k; c++) {
-                    BoolExpr[] present = new BoolExpr[plan.coloured.length];
-                    for (int qi = 0; qi < plan.coloured.length; qi++) {
-                        int q = plan.coloured[qi];
-                        present[qi] = ctx.mkGe(cur[lay.colCol[q][c]], ctx.mkInt(1));
+                    var present = new ArrayList<String>(plan.coloured.length);
+                    for (int q : plan.coloured) {
+                        present.add("(>= " + lay.cur.get(lay.colCol[q][c]) + " 1)");
                     }
-                    perColour[c] = ctx.mkOr(present);
+                    perColour.add("(or " + String.join(" ", present) + ")");
                 }
-                yield ctx.mkAnd(perColour);
+                yield "(and " + String.join(" ", perColour) + ")";
             }
             case Join j -> {
                 // No colour is shared by all correlated inputs: for every colour c, some
                 // input lacks c.
-                BoolExpr[] perColour = new BoolExpr[k];
+                var perColour = new ArrayList<String>(k);
                 for (int c = 0; c < k; c++) {
-                    BoolExpr[] missing = new BoolExpr[j.colouredIn().length];
-                    for (int ii = 0; ii < j.colouredIn().length; ii++) {
-                        int inCol = j.colouredIn()[ii];
-                        missing[ii] = ctx.mkEq(cur[lay.colCol[inCol][c]], ctx.mkInt(0));
+                    var missing = new ArrayList<String>(j.colouredIn().length);
+                    for (int inCol : j.colouredIn()) {
+                        missing.add("(= " + lay.cur.get(lay.colCol[inCol][c]) + " 0)");
                     }
-                    perColour[c] = ctx.mkOr(missing);
+                    perColour.add("(or " + String.join(" ", missing) + ")");
                 }
-                yield ctx.mkAnd(perColour);
+                yield "(and " + String.join(" ", perColour) + ")";
             }
             case Consume co -> {
                 // No colour present at the single coloured input.
-                BoolExpr[] perColour = new BoolExpr[k];
+                var perColour = new ArrayList<String>(k);
                 for (int c = 0; c < k; c++) {
-                    perColour[c] = ctx.mkEq(cur[lay.colCol[co.inputCol()][c]], ctx.mkInt(0));
+                    perColour.add("(= " + lay.cur.get(lay.colCol[co.inputCol()][c]) + " 0)");
                 }
-                yield ctx.mkAnd(perColour);
+                yield "(and " + String.join(" ", perColour) + ")";
             }
         };
     }
